Assignment3/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD_THIS
    KEYWORD_DEFINE
    KEYWORD_PACKAGE
    COMMENT
    KEYWORD_YIELD
    KEYWORD_WITH
    COMMENT_BEGIN
    KEYWORD_TYPE
    KEYWORD_IMPORT
    KEYWORD_BREAK
    COMMENT_END

Grammar

Rule 0     S' -> ProgramStructure
Rule 1     ProgramStructure -> ProgramStructure class_and_objects
Rule 2     ProgramStructure -> class_and_objects
Rule 3     class_and_objects -> SingletonObject
Rule 4     class_and_objects -> class_declaration
Rule 5     SingletonObject -> ObjectDeclare block
Rule 6     ObjectDeclare -> KEYWORD_OBJECT IDENTIFIER
Rule 7     ObjectDeclare -> KEYWORD_OBJECT IDENTIFIER KEYWORD_EXTENDS IDENTIFIER
Rule 8     block -> BLOCKBEGIN block_statements_opt BLOCKEND
Rule 9     block_statements_opt -> block_statements
Rule 10    block_statements_opt -> empty
Rule 11    block_statements -> block_statement
Rule 12    block_statements -> block_statements block_statement
Rule 13    block_statement -> local_variable_declaration_statement
Rule 14    block_statement -> statement
Rule 15    block_statement -> class_declaration
Rule 16    block_statement -> SingletonObject
Rule 17    block_statement -> method_declaration
Rule 18    expression -> assignment_expression
Rule 19    expression_optional -> expression
Rule 20    expression_optional -> empty
Rule 21    assignment_expression -> assignment
Rule 22    assignment_expression -> conditional_or_expression
Rule 23    assignment -> valid_variable assignment_operator assignment_expression
Rule 24    valid_variable -> name
Rule 25    valid_variable -> array_access
Rule 26    array_access -> name LBRAC expression RBRAC
Rule 27    assignment_operator -> ASOP
Rule 28    conditional_or_expression -> conditional_and_expression
Rule 29    conditional_or_expression -> conditional_or_expression OR conditional_and_expression
Rule 30    conditional_and_expression -> inclusive_or_expression
Rule 31    conditional_and_expression -> conditional_and_expression AND inclusive_or_expression
Rule 32    inclusive_or_expression -> exclusive_or_expression
Rule 33    inclusive_or_expression -> inclusive_or_expression OR_BITWISE exclusive_or_expression
Rule 34    exclusive_or_expression -> and_expression
Rule 35    exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 36    and_expression -> equality_expression
Rule 37    and_expression -> and_expression AND_BITWISE equality_expression
Rule 38    equality_expression -> relational_expression
Rule 39    equality_expression -> equality_expression EQUAL relational_expression
Rule 40    equality_expression -> equality_expression NEQUAL relational_expression
Rule 41    relational_expression -> shift_expression
Rule 42    relational_expression -> relational_expression GREATER shift_expression
Rule 43    relational_expression -> relational_expression LESS shift_expression
Rule 44    relational_expression -> relational_expression GEQ shift_expression
Rule 45    relational_expression -> relational_expression LEQ shift_expression
Rule 46    shift_expression -> additive_expression
Rule 47    shift_expression -> shift_expression LSHIFT additive_expression
Rule 48    shift_expression -> shift_expression RSHIFT additive_expression
Rule 49    additive_expression -> multiplicative_expression
Rule 50    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 51    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 52    multiplicative_expression -> unary_expression
Rule 53    multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 54    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 55    multiplicative_expression -> multiplicative_expression REMAINDER unary_expression
Rule 56    unary_expression -> PLUS unary_expression
Rule 57    unary_expression -> MINUS unary_expression
Rule 58    unary_expression -> unary_expression_not_plus_minus
Rule 59    unary_expression_not_plus_minus -> base_variable_set
Rule 60    unary_expression_not_plus_minus -> TILDA unary_expression
Rule 61    unary_expression_not_plus_minus -> NOT unary_expression
Rule 62    unary_expression_not_plus_minus -> cast_expression
Rule 63    base_variable_set -> variable_literal
Rule 64    base_variable_set -> LPAREN expression RPAREN
Rule 65    variable_literal -> valid_variable
Rule 66    variable_literal -> primary
Rule 67    cast_expression -> LPAREN primitive_type RPAREN unary_expression
Rule 68    primary -> literal
Rule 69    primary -> method_invocation
Rule 70    literal -> int_float
Rule 71    literal -> c_literal
Rule 72    c_literal -> CHAR
Rule 73    c_literal -> STRING
Rule 74    c_literal -> BOOL_CONSTT
Rule 75    c_literal -> BOOL_CONSTF
Rule 76    c_literal -> KEYWORD_NULL
Rule 77    int_float -> DOUBLE_NUMBER
Rule 78    int_float -> INT_NUMBER
Rule 79    method_invocation -> name LPAREN argument_list_opt RPAREN
Rule 80    argument_list_opt -> argument_list
Rule 81    argument_list_opt -> empty
Rule 82    argument_list -> expression
Rule 83    argument_list -> argument_list COMMA expression
Rule 84    modifier -> KEYWORD_PROTECTED
Rule 85    modifier -> KEYWORD_PRIVATE
Rule 86    modifier_opts -> modifier
Rule 87    modifier_opts -> empty
Rule 88    declaration_keyword -> KEYWORD_VAR
Rule 89    declaration_keyword -> KEYWORD_VAL
Rule 90    local_variable_declaration_statement -> local_variable_declaration TERMINATOR
Rule 91    local_variable_declaration -> modifier_opts declaration_keyword variable_declaration_body
Rule 92    variable_declaration_initializer -> expression
Rule 93    variable_declaration_initializer -> array_initializer
Rule 94    variable_declaration_initializer -> class_initializer
Rule 95    variable_arguement_list -> variable_declaration_initializer
Rule 96    variable_arguement_list -> variable_arguement_list COMMA variable_declaration_initializer
Rule 97    variable_declaration_body -> variable_declarator ASOP variable_declaration_initializer
Rule 98    variable_declaration_body -> LPAREN variable_declarators RPAREN ASOP LPAREN variable_arguement_list RPAREN
Rule 99    variable_declaration_body -> IDENTIFIER ASOP LPAREN func_arguement_list_opt RPAREN FUNTYPE expression
Rule 100   variable_declarators -> variable_declarator
Rule 101   variable_declarators -> variable_declarators COMMA variable_declarator
Rule 102   variable_declarator -> variable_declarator_id
Rule 103   variable_declarator_id -> IDENTIFIER COLON type
Rule 104   type -> primitive_type
Rule 105   type -> reference_type
Rule 106   primitive_type -> TYPE_INT
Rule 107   primitive_type -> TYPE_DOUBLE
Rule 108   primitive_type -> TYPE_CHAR
Rule 109   primitive_type -> TYPE_STRING
Rule 110   primitive_type -> TYPE_BOOLEAN
Rule 111   reference_type -> class_data_type
Rule 112   reference_type -> array_data_type
Rule 113   class_data_type -> name
Rule 114   array_data_type -> KEYWORD_ARRAY LBRAC type RBRAC
Rule 115   name -> simple_name
Rule 116   name -> qualified_name
Rule 117   simple_name -> IDENTIFIER
Rule 118   qualified_name -> name INST simple_name
Rule 119   array_initializer -> KEYWORD_NEW KEYWORD_ARRAY LBRAC type RBRAC LPAREN INT_NUMBER RPAREN
Rule 120   array_initializer -> KEYWORD_ARRAY LPAREN argument_list_opt RPAREN
Rule 121   class_initializer -> KEYWORD_NEW name LPAREN argument_list_opt RPAREN
Rule 122   statement -> normal_statement
Rule 123   statement -> if_then_statement
Rule 124   statement -> if_then_else_statement
Rule 125   statement -> while_statement
Rule 126   statement -> do_while_statement
Rule 127   statement -> for_statement
Rule 128   normal_statement -> block
Rule 129   normal_statement -> expression_statement
Rule 130   normal_statement -> empty_statement
Rule 131   normal_statement -> return_statement
Rule 132   normal_statement -> switch_statement
Rule 133   expression_statement -> statement_expression TERMINATOR
Rule 134   statement_expression -> assignment
Rule 135   statement_expression -> method_invocation
Rule 136   if_then_statement -> KEYWORD_IF LPAREN expression RPAREN statement
Rule 137   if_then_else_statement -> KEYWORD_IF LPAREN expression RPAREN if_then_else_intermediate KEYWORD_ELSE statement
Rule 138   if_then_else_statement_precedence -> KEYWORD_IF LPAREN expression RPAREN if_then_else_intermediate KEYWORD_ELSE if_then_else_intermediate
Rule 139   if_then_else_intermediate -> normal_statement
Rule 140   if_then_else_intermediate -> if_then_else_statement_precedence
Rule 141   while_statement -> KEYWORD_WHILE LPAREN expression RPAREN statement
Rule 142   do_while_statement -> KEYWORD_DO statement KEYWORD_WHILE LPAREN expression RPAREN TERMINATOR
Rule 143   for_statement -> KEYWORD_FOR LPAREN for_logic RPAREN statement
Rule 144   for_logic -> for_update
Rule 145   for_logic -> for_update TERMINATOR for_logic
Rule 146   for_update -> for_loop for_step_opts
Rule 147   for_loop -> IDENTIFIER CHOOSE expression for_untilTo expression
Rule 148   for_untilTo -> KEYWORD_UNTIL
Rule 149   for_untilTo -> KEYWORD_TO
Rule 150   for_step_opts -> KEYWORD_BY expression
Rule 151   for_step_opts -> empty
Rule 152   switch_statement -> expression KEYWORD_MATCH switch_block
Rule 153   switch_block -> BLOCKBEGIN BLOCKEND
Rule 154   switch_block -> BLOCKBEGIN switch_block_statements BLOCKEND
Rule 155   switch_block -> BLOCKBEGIN switch_labels BLOCKEND
Rule 156   switch_block -> BLOCKBEGIN switch_block_statements switch_labels BLOCKEND
Rule 157   switch_block_statements -> switch_block_statement
Rule 158   switch_block_statements -> switch_block_statements switch_block_statement
Rule 159   switch_block_statement -> switch_labels block_statements
Rule 160   switch_labels -> switch_label
Rule 161   switch_labels -> switch_labels switch_label
Rule 162   switch_label -> KEYWORD_CASE expression FUNTYPE
Rule 163   empty_statement -> TERMINATOR
Rule 164   return_statement -> KEYWORD_RETURN expression_optional TERMINATOR
Rule 165   class_declaration -> class_header class_body
Rule 166   class_header -> class_header_name class_header_extends_opt
Rule 167   class_header_name -> class_header_name1 LPAREN constructor_arguement_list_opt RPAREN
Rule 168   class_header_name1 -> modifier_opts KEYWORD_CLASS name
Rule 169   class_header_extends_opt -> class_header_extends
Rule 170   class_header_extends_opt -> empty
Rule 171   class_header_extends -> KEYWORD_EXTENDS name LPAREN func_arguement_list_opt RPAREN
Rule 172   constructor_arguement_list_opt -> constructor_arguement_list
Rule 173   constructor_arguement_list_opt -> empty
Rule 174   constructor_arguement_list -> constructor_arguement_list_declarator
Rule 175   constructor_arguement_list -> constructor_arguement_list COMMA constructor_arguement_list_declarator
Rule 176   constructor_arguement_list_declarator -> declaration_keyword IDENTIFIER COLON type
Rule 177   class_body -> block
Rule 178   method_declaration -> method_header method_body
Rule 179   method_header -> method_header_name LPAREN func_arguement_list_opt RPAREN COLON method_return_type ASOP
Rule 180   method_return_type -> type
Rule 181   method_return_type -> TYPE_VOID
Rule 182   method_header_name -> modifier_opts KEYWORD_DEF IDENTIFIER
Rule 183   func_arguement_list_opt -> variable_declarators
Rule 184   func_arguement_list_opt -> empty
Rule 185   method_body -> block
Rule 186   empty -> <empty>

Terminals, with rules where they appear

AND                  : 31
AND_BITWISE          : 37
ASOP                 : 27 97 98 99 179
BLOCKBEGIN           : 8 153 154 155 156
BLOCKEND             : 8 153 154 155 156
BOOL_CONSTF          : 75
BOOL_CONSTT          : 74
CHAR                 : 72
CHOOSE               : 147
COLON                : 103 176 179
COMMA                : 83 96 101 175
COMMENT              : 
COMMENT_BEGIN        : 
COMMENT_END          : 
DIVIDE               : 54
DOUBLE_NUMBER        : 77
EQUAL                : 39
FUNTYPE              : 99 162
GEQ                  : 44
GREATER              : 42
IDENTIFIER           : 6 7 7 99 103 117 147 176 182
INST                 : 118
INT_NUMBER           : 78 119
KEYWORD_ARRAY        : 114 119 120
KEYWORD_BREAK        : 
KEYWORD_BY           : 150
KEYWORD_CASE         : 162
KEYWORD_CLASS        : 168
KEYWORD_DEF          : 182
KEYWORD_DEFINE       : 
KEYWORD_DO           : 142
KEYWORD_ELSE         : 137 138
KEYWORD_EXTENDS      : 7 171
KEYWORD_FOR          : 143
KEYWORD_IF           : 136 137 138
KEYWORD_IMPORT       : 
KEYWORD_MATCH        : 152
KEYWORD_NEW          : 119 121
KEYWORD_NULL         : 76
KEYWORD_OBJECT       : 6 7
KEYWORD_PACKAGE      : 
KEYWORD_PRIVATE      : 85
KEYWORD_PROTECTED    : 84
KEYWORD_RETURN       : 164
KEYWORD_THIS         : 
KEYWORD_TO           : 149
KEYWORD_TYPE         : 
KEYWORD_UNTIL        : 148
KEYWORD_VAL          : 89
KEYWORD_VAR          : 88
KEYWORD_WHILE        : 141 142
KEYWORD_WITH         : 
KEYWORD_YIELD        : 
LBRAC                : 26 114 119
LEQ                  : 45
LESS                 : 43
LPAREN               : 64 67 79 98 98 99 119 120 121 136 137 138 141 142 143 167 171 179
LSHIFT               : 47
MINUS                : 51 57
NEQUAL               : 40
NOT                  : 61
OR                   : 29
OR_BITWISE           : 33
PLUS                 : 50 56
RBRAC                : 26 114 119
REMAINDER            : 55
RPAREN               : 64 67 79 98 98 99 119 120 121 136 137 138 141 142 143 167 171 179
RSHIFT               : 48
STRING               : 73
TERMINATOR           : 90 133 142 145 163 164
TILDA                : 60
TIMES                : 53
TYPE_BOOLEAN         : 110
TYPE_CHAR            : 108
TYPE_DOUBLE          : 107
TYPE_INT             : 106
TYPE_STRING          : 109
TYPE_VOID            : 181
XOR                  : 35
error                : 

Nonterminals, with rules where they appear

ObjectDeclare        : 5
ProgramStructure     : 1 0
SingletonObject      : 3 16
additive_expression  : 46 47 48 50 51
and_expression       : 34 35 37
argument_list        : 80 83
argument_list_opt    : 79 120 121
array_access         : 25
array_data_type      : 112
array_initializer    : 93
assignment           : 21 134
assignment_expression : 18 23
assignment_operator  : 23
base_variable_set    : 59
block                : 5 128 177 185
block_statement      : 11 12
block_statements     : 9 12 159
block_statements_opt : 8
c_literal            : 71
cast_expression      : 62
class_and_objects    : 1 2
class_body           : 165
class_data_type      : 111
class_declaration    : 4 15
class_header         : 165
class_header_extends : 169
class_header_extends_opt : 166
class_header_name    : 166
class_header_name1   : 167
class_initializer    : 94
conditional_and_expression : 28 29 31
conditional_or_expression : 22 29
constructor_arguement_list : 172 175
constructor_arguement_list_declarator : 174 175
constructor_arguement_list_opt : 167
declaration_keyword  : 91 176
do_while_statement   : 126
empty                : 10 20 81 87 151 170 173 184
empty_statement      : 130
equality_expression  : 36 37 39 40
exclusive_or_expression : 32 33 35
expression           : 19 26 64 82 83 92 99 136 137 138 141 142 147 147 150 152 162
expression_optional  : 164
expression_statement : 129
for_logic            : 143 145
for_loop             : 146
for_statement        : 127
for_step_opts        : 146
for_untilTo          : 147
for_update           : 144 145
func_arguement_list_opt : 99 171 179
if_then_else_intermediate : 137 138 138
if_then_else_statement : 124
if_then_else_statement_precedence : 140
if_then_statement    : 123
inclusive_or_expression : 30 31 33
int_float            : 70
literal              : 68
local_variable_declaration : 90
local_variable_declaration_statement : 13
method_body          : 178
method_declaration   : 17
method_header        : 178
method_header_name   : 179
method_invocation    : 69 135
method_return_type   : 179
modifier             : 86
modifier_opts        : 91 168 182
multiplicative_expression : 49 50 51 53 54 55
name                 : 24 26 79 113 118 121 168 171
normal_statement     : 122 139
primary              : 66
primitive_type       : 67 104
qualified_name       : 116
reference_type       : 105
relational_expression : 38 39 40 42 43 44 45
return_statement     : 131
shift_expression     : 41 42 43 44 45 47 48
simple_name          : 115 118
statement            : 14 136 137 141 142 143
statement_expression : 133
switch_block         : 152
switch_block_statement : 157 158
switch_block_statements : 154 156 158
switch_label         : 160 161
switch_labels        : 155 156 159 161
switch_statement     : 132
type                 : 103 114 119 176 180
unary_expression     : 52 53 54 55 56 57 60 61 67
unary_expression_not_plus_minus : 58
valid_variable       : 23 65
variable_arguement_list : 96 98
variable_declaration_body : 91
variable_declaration_initializer : 95 96 97
variable_declarator  : 97 100 101
variable_declarator_id : 102
variable_declarators : 98 101 183
variable_literal     : 63
while_statement      : 125

Parsing method: LALR

state 0

    (0) S' -> . ProgramStructure
    (1) ProgramStructure -> . ProgramStructure class_and_objects
    (2) ProgramStructure -> . class_and_objects
    (3) class_and_objects -> . SingletonObject
    (4) class_and_objects -> . class_declaration
    (5) SingletonObject -> . ObjectDeclare block
    (165) class_declaration -> . class_header class_body
    (6) ObjectDeclare -> . KEYWORD_OBJECT IDENTIFIER
    (7) ObjectDeclare -> . KEYWORD_OBJECT IDENTIFIER KEYWORD_EXTENDS IDENTIFIER
    (166) class_header -> . class_header_name class_header_extends_opt
    (167) class_header_name -> . class_header_name1 LPAREN constructor_arguement_list_opt RPAREN
    (168) class_header_name1 -> . modifier_opts KEYWORD_CLASS name
    (86) modifier_opts -> . modifier
    (87) modifier_opts -> . empty
    (84) modifier -> . KEYWORD_PROTECTED
    (85) modifier -> . KEYWORD_PRIVATE
    (186) empty -> .

    KEYWORD_OBJECT  shift and go to state 3
    KEYWORD_PROTECTED shift and go to state 12
    KEYWORD_PRIVATE shift and go to state 9
    KEYWORD_CLASS   reduce using rule 186 (empty -> .)

    class_header_name              shift and go to state 5
    ProgramStructure               shift and go to state 7
    ObjectDeclare                  shift and go to state 1
    class_header_name1             shift and go to state 2
    class_declaration              shift and go to state 4
    class_and_objects              shift and go to state 13
    empty                          shift and go to state 6
    SingletonObject                shift and go to state 8
    modifier                       shift and go to state 14
    class_header                   shift and go to state 10
    modifier_opts                  shift and go to state 11

state 1

    (5) SingletonObject -> ObjectDeclare . block
    (8) block -> . BLOCKBEGIN block_statements_opt BLOCKEND

    BLOCKBEGIN      shift and go to state 15

    block                          shift and go to state 16

state 2

    (167) class_header_name -> class_header_name1 . LPAREN constructor_arguement_list_opt RPAREN

    LPAREN          shift and go to state 17


state 3

    (6) ObjectDeclare -> KEYWORD_OBJECT . IDENTIFIER
    (7) ObjectDeclare -> KEYWORD_OBJECT . IDENTIFIER KEYWORD_EXTENDS IDENTIFIER

    IDENTIFIER      shift and go to state 18


state 4

    (4) class_and_objects -> class_declaration .

    KEYWORD_OBJECT  reduce using rule 4 (class_and_objects -> class_declaration .)
    KEYWORD_PROTECTED reduce using rule 4 (class_and_objects -> class_declaration .)
    KEYWORD_PRIVATE reduce using rule 4 (class_and_objects -> class_declaration .)
    $end            reduce using rule 4 (class_and_objects -> class_declaration .)
    KEYWORD_CLASS   reduce using rule 4 (class_and_objects -> class_declaration .)


state 5

    (166) class_header -> class_header_name . class_header_extends_opt
    (169) class_header_extends_opt -> . class_header_extends
    (170) class_header_extends_opt -> . empty
    (171) class_header_extends -> . KEYWORD_EXTENDS name LPAREN func_arguement_list_opt RPAREN
    (186) empty -> .

    KEYWORD_EXTENDS shift and go to state 21
    BLOCKBEGIN      reduce using rule 186 (empty -> .)

    class_header_extends           shift and go to state 19
    class_header_extends_opt       shift and go to state 20
    empty                          shift and go to state 22

state 6

    (87) modifier_opts -> empty .

    KEYWORD_DEF     reduce using rule 87 (modifier_opts -> empty .)
    KEYWORD_CLASS   reduce using rule 87 (modifier_opts -> empty .)
    KEYWORD_VAR     reduce using rule 87 (modifier_opts -> empty .)
    KEYWORD_VAL     reduce using rule 87 (modifier_opts -> empty .)


state 7

    (0) S' -> ProgramStructure .
    (1) ProgramStructure -> ProgramStructure . class_and_objects
    (3) class_and_objects -> . SingletonObject
    (4) class_and_objects -> . class_declaration
    (5) SingletonObject -> . ObjectDeclare block
    (165) class_declaration -> . class_header class_body
    (6) ObjectDeclare -> . KEYWORD_OBJECT IDENTIFIER
    (7) ObjectDeclare -> . KEYWORD_OBJECT IDENTIFIER KEYWORD_EXTENDS IDENTIFIER
    (166) class_header -> . class_header_name class_header_extends_opt
    (167) class_header_name -> . class_header_name1 LPAREN constructor_arguement_list_opt RPAREN
    (168) class_header_name1 -> . modifier_opts KEYWORD_CLASS name
    (86) modifier_opts -> . modifier
    (87) modifier_opts -> . empty
    (84) modifier -> . KEYWORD_PROTECTED
    (85) modifier -> . KEYWORD_PRIVATE
    (186) empty -> .

    KEYWORD_OBJECT  shift and go to state 3
    KEYWORD_PROTECTED shift and go to state 12
    KEYWORD_PRIVATE shift and go to state 9
    KEYWORD_CLASS   reduce using rule 186 (empty -> .)

    class_header_name              shift and go to state 5
    ObjectDeclare                  shift and go to state 1
    class_header_name1             shift and go to state 2
    class_declaration              shift and go to state 4
    class_and_objects              shift and go to state 23
    empty                          shift and go to state 6
    SingletonObject                shift and go to state 8
    modifier                       shift and go to state 14
    class_header                   shift and go to state 10
    modifier_opts                  shift and go to state 11

state 8

    (3) class_and_objects -> SingletonObject .

    KEYWORD_OBJECT  reduce using rule 3 (class_and_objects -> SingletonObject .)
    KEYWORD_PROTECTED reduce using rule 3 (class_and_objects -> SingletonObject .)
    KEYWORD_PRIVATE reduce using rule 3 (class_and_objects -> SingletonObject .)
    $end            reduce using rule 3 (class_and_objects -> SingletonObject .)
    KEYWORD_CLASS   reduce using rule 3 (class_and_objects -> SingletonObject .)


state 9

    (85) modifier -> KEYWORD_PRIVATE .

    KEYWORD_DEF     reduce using rule 85 (modifier -> KEYWORD_PRIVATE .)
    KEYWORD_CLASS   reduce using rule 85 (modifier -> KEYWORD_PRIVATE .)
    KEYWORD_VAR     reduce using rule 85 (modifier -> KEYWORD_PRIVATE .)
    KEYWORD_VAL     reduce using rule 85 (modifier -> KEYWORD_PRIVATE .)


state 10

    (165) class_declaration -> class_header . class_body
    (177) class_body -> . block
    (8) block -> . BLOCKBEGIN block_statements_opt BLOCKEND

    BLOCKBEGIN      shift and go to state 15

    class_body                     shift and go to state 24
    block                          shift and go to state 25

state 11

    (168) class_header_name1 -> modifier_opts . KEYWORD_CLASS name

    KEYWORD_CLASS   shift and go to state 26


state 12

    (84) modifier -> KEYWORD_PROTECTED .

    KEYWORD_DEF     reduce using rule 84 (modifier -> KEYWORD_PROTECTED .)
    KEYWORD_CLASS   reduce using rule 84 (modifier -> KEYWORD_PROTECTED .)
    KEYWORD_VAR     reduce using rule 84 (modifier -> KEYWORD_PROTECTED .)
    KEYWORD_VAL     reduce using rule 84 (modifier -> KEYWORD_PROTECTED .)


state 13

    (2) ProgramStructure -> class_and_objects .

    KEYWORD_OBJECT  reduce using rule 2 (ProgramStructure -> class_and_objects .)
    KEYWORD_PROTECTED reduce using rule 2 (ProgramStructure -> class_and_objects .)
    KEYWORD_PRIVATE reduce using rule 2 (ProgramStructure -> class_and_objects .)
    $end            reduce using rule 2 (ProgramStructure -> class_and_objects .)
    KEYWORD_CLASS   reduce using rule 2 (ProgramStructure -> class_and_objects .)


state 14

    (86) modifier_opts -> modifier .

    KEYWORD_DEF     reduce using rule 86 (modifier_opts -> modifier .)
    KEYWORD_CLASS   reduce using rule 86 (modifier_opts -> modifier .)
    KEYWORD_VAR     reduce using rule 86 (modifier_opts -> modifier .)
    KEYWORD_VAL     reduce using rule 86 (modifier_opts -> modifier .)


state 15

    (8) block -> BLOCKBEGIN . block_statements_opt BLOCKEND
    (9) block_statements_opt -> . block_statements
    (10) block_statements_opt -> . empty
    (11) block_statements -> . block_statement
    (12) block_statements -> . block_statements block_statement
    (186) empty -> .
    (13) block_statement -> . local_variable_declaration_statement
    (14) block_statement -> . statement
    (15) block_statement -> . class_declaration
    (16) block_statement -> . SingletonObject
    (17) block_statement -> . method_declaration
    (90) local_variable_declaration_statement -> . local_variable_declaration TERMINATOR
    (122) statement -> . normal_statement
    (123) statement -> . if_then_statement
    (124) statement -> . if_then_else_statement
    (125) statement -> . while_statement
    (126) statement -> . do_while_statement
    (127) statement -> . for_statement
    (165) class_declaration -> . class_header class_body
    (5) SingletonObject -> . ObjectDeclare block
    (178) method_declaration -> . method_header method_body
    (91) local_variable_declaration -> . modifier_opts declaration_keyword variable_declaration_body
    (128) normal_statement -> . block
    (129) normal_statement -> . expression_statement
    (130) normal_statement -> . empty_statement
    (131) normal_statement -> . return_statement
    (132) normal_statement -> . switch_statement
    (136) if_then_statement -> . KEYWORD_IF LPAREN expression RPAREN statement
    (137) if_then_else_statement -> . KEYWORD_IF LPAREN expression RPAREN if_then_else_intermediate KEYWORD_ELSE statement
    (141) while_statement -> . KEYWORD_WHILE LPAREN expression RPAREN statement
    (142) do_while_statement -> . KEYWORD_DO statement KEYWORD_WHILE LPAREN expression RPAREN TERMINATOR
    (143) for_statement -> . KEYWORD_FOR LPAREN for_logic RPAREN statement
    (166) class_header -> . class_header_name class_header_extends_opt
    (6) ObjectDeclare -> . KEYWORD_OBJECT IDENTIFIER
    (7) ObjectDeclare -> . KEYWORD_OBJECT IDENTIFIER KEYWORD_EXTENDS IDENTIFIER
    (179) method_header -> . method_header_name LPAREN func_arguement_list_opt RPAREN COLON method_return_type ASOP
    (86) modifier_opts -> . modifier
    (87) modifier_opts -> . empty
    (8) block -> . BLOCKBEGIN block_statements_opt BLOCKEND
    (133) expression_statement -> . statement_expression TERMINATOR
    (163) empty_statement -> . TERMINATOR
    (164) return_statement -> . KEYWORD_RETURN expression_optional TERMINATOR
    (152) switch_statement -> . expression KEYWORD_MATCH switch_block
    (167) class_header_name -> . class_header_name1 LPAREN constructor_arguement_list_opt RPAREN
    (182) method_header_name -> . modifier_opts KEYWORD_DEF IDENTIFIER
    (84) modifier -> . KEYWORD_PROTECTED
    (85) modifier -> . KEYWORD_PRIVATE
    (134) statement_expression -> . assignment
    (135) statement_expression -> . method_invocation
    (18) expression -> . assignment_expression
    (168) class_header_name1 -> . modifier_opts KEYWORD_CLASS name
    (23) assignment -> . valid_variable assignment_operator assignment_expression
    (79) method_invocation -> . name LPAREN argument_list_opt RPAREN
    (21) assignment_expression -> . assignment
    (22) assignment_expression -> . conditional_or_expression
    (24) valid_variable -> . name
    (25) valid_variable -> . array_access
    (115) name -> . simple_name
    (116) name -> . qualified_name
    (28) conditional_or_expression -> . conditional_and_expression
    (29) conditional_or_expression -> . conditional_or_expression OR conditional_and_expression
    (26) array_access -> . name LBRAC expression RBRAC
    (117) simple_name -> . IDENTIFIER
    (118) qualified_name -> . name INST simple_name
    (30) conditional_and_expression -> . inclusive_or_expression
    (31) conditional_and_expression -> . conditional_and_expression AND inclusive_or_expression
    (32) inclusive_or_expression -> . exclusive_or_expression
    (33) inclusive_or_expression -> . inclusive_or_expression OR_BITWISE exclusive_or_expression
    (34) exclusive_or_expression -> . and_expression
    (35) exclusive_or_expression -> . exclusive_or_expression XOR and_expression
    (36) and_expression -> . equality_expression
    (37) and_expression -> . and_expression AND_BITWISE equality_expression
    (38) equality_expression -> . relational_expression
    (39) equality_expression -> . equality_expression EQUAL relational_expression
    (40) equality_expression -> . equality_expression NEQUAL relational_expression
    (41) relational_expression -> . shift_expression
    (42) relational_expression -> . relational_expression GREATER shift_expression
    (43) relational_expression -> . relational_expression LESS shift_expression
    (44) relational_expression -> . relational_expression GEQ shift_expression
    (45) relational_expression -> . relational_expression LEQ shift_expression
    (46) shift_expression -> . additive_expression
    (47) shift_expression -> . shift_expression LSHIFT additive_expression
    (48) shift_expression -> . shift_expression RSHIFT additive_expression
    (49) additive_expression -> . multiplicative_expression
    (50) additive_expression -> . additive_expression PLUS multiplicative_expression
    (51) additive_expression -> . additive_expression MINUS multiplicative_expression
    (52) multiplicative_expression -> . unary_expression
    (53) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (54) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (55) multiplicative_expression -> . multiplicative_expression REMAINDER unary_expression
    (56) unary_expression -> . PLUS unary_expression
    (57) unary_expression -> . MINUS unary_expression
    (58) unary_expression -> . unary_expression_not_plus_minus
    (59) unary_expression_not_plus_minus -> . base_variable_set
    (60) unary_expression_not_plus_minus -> . TILDA unary_expression
    (61) unary_expression_not_plus_minus -> . NOT unary_expression
    (62) unary_expression_not_plus_minus -> . cast_expression
    (63) base_variable_set -> . variable_literal
    (64) base_variable_set -> . LPAREN expression RPAREN
    (67) cast_expression -> . LPAREN primitive_type RPAREN unary_expression
    (65) variable_literal -> . valid_variable
    (66) variable_literal -> . primary
    (68) primary -> . literal
    (69) primary -> . method_invocation
    (70) literal -> . int_float
    (71) literal -> . c_literal
    (77) int_float -> . DOUBLE_NUMBER
    (78) int_float -> . INT_NUMBER
    (72) c_literal -> . CHAR
    (73) c_literal -> . STRING
    (74) c_literal -> . BOOL_CONSTT
    (75) c_literal -> . BOOL_CONSTF
    (76) c_literal -> . KEYWORD_NULL

    BLOCKEND        reduce using rule 186 (empty -> .)
    KEYWORD_DEF     reduce using rule 186 (empty -> .)
    KEYWORD_CLASS   reduce using rule 186 (empty -> .)
    KEYWORD_VAR     reduce using rule 186 (empty -> .)
    KEYWORD_VAL     reduce using rule 186 (empty -> .)
    KEYWORD_IF      shift and go to state 81
    KEYWORD_WHILE   shift and go to state 50
    KEYWORD_DO      shift and go to state 98
    KEYWORD_FOR     shift and go to state 97
    KEYWORD_OBJECT  shift and go to state 3
    BLOCKBEGIN      shift and go to state 15
    TERMINATOR      shift and go to state 53
    KEYWORD_RETURN  shift and go to state 68
    KEYWORD_PROTECTED shift and go to state 12
    KEYWORD_PRIVATE shift and go to state 9
    IDENTIFIER      shift and go to state 77
    PLUS            shift and go to state 36
    MINUS           shift and go to state 29
    TILDA           shift and go to state 72
    NOT             shift and go to state 57
    LPAREN          shift and go to state 94
    DOUBLE_NUMBER   shift and go to state 33
    INT_NUMBER      shift and go to state 44
    CHAR            shift and go to state 63
    STRING          shift and go to state 76
    BOOL_CONSTT     shift and go to state 35
    BOOL_CONSTF     shift and go to state 30
    KEYWORD_NULL    shift and go to state 65
